[project]
name = "bronco-buddies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "modal>=0.74.3",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.12",
    "simpleicons>=7.21.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.2",
]
